# ureader

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist
.github/workflows/: ci.yml
docs/: code-review-2026-05-14.md  pm-review-2026-05-14.md  tickets.md
docs/superpowers/plans/: 2026-05-14-epub-reader.md  2026-05-14-native-toc-sidebar.md  2026-05-14-phase2.md
docs/superpowers/specs/: 2026-05-14-epub-reader-design.md  2026-05-14-native-toc-sidebar-design.md  2026-05-14-phase2-design.md
modules/app/: CMakeLists.txt
modules/app/src/: StateStore.cpp  StateStore.h
modules/epub/: CMakeLists.txt
modules/epub/src/: EpubInternal.h  EpubParser.cpp  EpubParser.h
modules/epub/tests/fixtures/: create_fixtures.sh  minimal.epub
modules/ui/macos/: CMakeLists.txt
modules/ui/macos/src/: AppDelegate.mm  BridgeMessageHandler.mm  EpubSchemeHandler.mm  EpubWindowController.h  EpubWindowController.mm  Info.plist  main.mm
modules/ui/macos/tests/: CMakeLists.txt  GenerateXCTestConfig.m  ReaderUITests.mm
resources/: shell.html
resources/icon/: AppIcon.icns  make_icon.py
src/: main.mm
src/app/: CMakeLists.txt  StateStore.cpp
src/epub/: CMakeLists.txt  EpubBook.cpp  EpubBook.h  EpubParser.cpp
src/epub/fixtures/: create_fixtures.sh  minimal.epub
src/epub/tests/: test_epub_parser.cpp
src/ui/macos/: AppDelegate.mm  BridgeMessageHandler.h  BridgeMessageHandler.mm  CMakeLists.txt  EpubSchemeHandler.h  EpubWindowController.h  EpubWindowController.mm  TocSidebarViewController.h  TocSidebarViewController.mm
tests/ui/: CMakeLists.txt  ReaderUITests.mm
